Fix smooth scrolling; Hide overflow-x

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ html {
 }
 
 body{
+  overflow-x: hidden;
   min-width: 360px;
   max-width: 100%;
 }
